src/objects/Tipo_Producto_CIA_Gremio__c.object
<CustomObject>
    <fields>
        <fullName>TPRG_LKP_Tipo_Producto_CIA__c</fullName>
        <label>Tipo de Producto CIA</label>
        <referenceTo>Tipo_Producto_CIA__c</referenceTo>
        <relationshipLabel>Configuración de Gremios</relationshipLabel>
        <relationshipName>Compania_Tipos_de_Producto_y_Gremios</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TPRG_NUM_Limite_Servicios__c</fullName>
        <label>Límite de Servicios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TPRG_SEL_Gremio__c</fullName>
        <label>Gremio</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Gremios</valueSetName>
        </valueSet>
    </fields>
    <label>Compañía: Tipo de Producto y Gremio</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compañía: Tipos de Producto y Gremios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>